bug na animacao e jump falta finalizar

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,44 @@
 .dino {
     width: 60px;
     height: 60px;
-    background-color: green;
     position: absolute;
     border-radius: 10px 0px 100px 30px;
     bottom: 1px;
+    background-image: url('/img/dino.png');
 }
 
-.background {
-   
+.body {
+   background-color: #f2f2f2;
 }
 
 
 .cactus {
-    width: 60px;
-    height: 60px;
-    background-color: red;
+    width: 45px;
+    height: 45px;
+    background-image: url('/img/cactus.png');
     position: absolute;
     border-radius: 10px 0px 100px 30px;
     bottom: 1px;
+}
+
+#keyframes sliderRight {
+    from {
+        background-position: 70000%;
+    } to {
+        background-position: 0;
+    }
+}
+
+.background{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    background-repeat: repeat-x;
+    background-image: url('/img/background.png');
+}
+
+.game-over {
+    text-align: center;
+    color: grey;
 }
